Updating leagues' schedules.

--- a/couples-league.html
+++ b/couples-league.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -18,14 +18,14 @@
       href="assets/css/vendor/bootstrap.min.css"
       as="style"
       media="print"
-      onload="this.media='all'"
+      onload="this.media = 'all'"
     />
     <link
       rel="stylesheet preload"
       href="assets/css/plugins/metismenu.css"
       as="style"
       media="print"
-      onload="this.media='all'"
+      onload="this.media = 'all'"
     />
 
     <link rel="stylesheet preload" href="css/style.css" as="style" />
@@ -105,10 +105,10 @@
         <div class="container-consulting">
           <div class="row">
             <div class="title-center-style-two">
-              <h2 class="title">2025 Couple’s League Schedule</h2>
+              <h2 class="title">2026 Couple’s League Schedule</h2>
               <div class="schedule-note">
-                Check in is at 5:00pm and we shotgun at 6:00pm each Friday. $10
-                per couple for members, $20 per couple for non-members.
+                Check in is at 5pm and we shotgun at 6pm each Friday. $10 per
+                couple for members, $20 per couple for non-members.
               </div>
             </div>
             <div class="col-lg-12">
@@ -117,7 +117,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">April 25th</span> - 1 Couple Scramble
+                      <span class="date">April 24th</span> - 1 Couple Scramble
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -127,7 +127,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">May 2nd</span> - 2 Couple Scramble –
+                      <span class="date">May 1st</span> - 2 Couple Scramble –
                       Each team gets a 5th putt if needed (must rotate).
                     </p>
                   </div>
@@ -138,7 +138,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">May 9th</span> - 2 Couple Scramble -
+                      <span class="date">May 8th</span> - 2 Couple Scramble -
                       Guys putt odd holes, girls putt even holes.
                     </p>
                   </div>
@@ -149,8 +149,8 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">May 16th</span> - 2 Couple Modified
-                      Chapman - Count 1 score.
+                      <span class="date">May 15th</span> - 2 Couple Shamble -
+                      Count 2 scores.
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -160,7 +160,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">May 23rd</span> - 1 Couple Scramble and
+                      <span class="date">May 22nd</span> - 1 Couple Scramble and
                       Scramble - Scramble par 3’s and 5’s, shamble par 4’s.
                     </p>
                   </div>
@@ -171,7 +171,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">May 30th</span> - 2 Couple Scramble
+                      <span class="date">May 29th</span> - 2 Couple Scramble
                       Switch-Up - Each hole switch partners and play 2
                       two-person scrambles. Add scores together.
                     </p>
@@ -183,8 +183,8 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">June 6th</span> - 2 Couple Scramble and
-                      Shamble. Scramble odd holes, shamble even holes.
+                      <span class="date"><s>June 5th</s></span>
+                      - No league play.
                     </p>
                   </div>
 
@@ -195,7 +195,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">June 13th</span> - 2 Couple Scramble
+                      <span class="date">June 12th</span> - 2 Couple Scramble
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -205,7 +205,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">June 20th</span> - 1 Couple Scramble
+                      <span class="date">June 19th</span> - 1 Couple Scramble
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -215,7 +215,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">June 27th</span> - 2 Couple Scramble -
+                      <span class="date">June 26th</span> - 2 Couple Scramble -
                       Women putt odd holes, men putt even holes.
                     </p>
                   </div>
@@ -226,8 +226,9 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date"><s>July 4th</s></span> - No league play
-                      for the holiday. 🇺🇸
+                      <span class="date">July 3rd</span> - 2 Couple Wildcard - 3
+                      scramble, 1 shamble (shamble player rotates and add scores
+                      together.)
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -237,7 +238,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">July 11th</span> - 2 Couple
+                      <span class="date">July 10th</span> - 2 Couple
                       Carts/Riders/Opposites - Switch partners every 3 holes.
                       Count 1 score.
                     </p>
@@ -249,7 +250,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">July 18th</span> - 2 Couple Scramble -
+                      <span class="date">July 17th</span> - 2 Couple Scramble -
                       Add both scores together.
                     </p>
                   </div>
@@ -260,8 +261,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">July 25th</span> - 2 Couple Modified
-                      Chapman - Add both scores together.
+                      <span class="date">July 24th</span> - 1 Couple Scramble
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -271,7 +271,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">August 1st</span> - 1 Couple Scramble
+                      <span class="date">July 31st</span> - 1 Couple Scramble
                       and Shamble - Scramble par 3's and 5's, shamble par 4's.
                     </p>
                   </div>
@@ -282,7 +282,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">August 8th</span> - 2 Couple Scramble
+                      <span class="date">August 7th</span> - 2 Couple Scramble
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -292,8 +292,8 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">August 15th</span> - 1 Couple Modified
-                      Chapman - Chapman par 3's and 5's, shamble par 4's.
+                      <span class="date">August 14th</span> - 1 Couple Shamble
+                      and Scramble - Shamble par 3's and 5's, scramble par 4's.
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -303,7 +303,8 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">August 22nd</span> - 2 Couple Scramble
+                      <span class="date">August 21st</span> - 2 Couple Scramble
+                      - Girls tee off on odd holes, guys tee off on even holes.
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -313,9 +314,9 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">August 29th</span> - 1 Couple Modified
-                      Scramble - Scramble from 150 yards on par 4's & 5's,
-                      yellow tees on par 3's.
+                      <span class="date">August 28th</span> - 1 Couple Scramble
+                      - Scramble from 150 yds on 4's & 5's, yellow tees on par
+                      3's.
                     </p>
                   </div>
                   <div class="timeline-dot">
