--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -18,14 +18,14 @@
       href="assets/css/vendor/bootstrap.min.css"
       as="style"
       media="print"
-      onload="this.media='all'"
+      onload="this.media = 'all'"
     />
     <link
       rel="stylesheet preload"
       href="assets/css/plugins/metismenu.css"
       as="style"
       media="print"
-      onload="this.media='all'"
+      onload="this.media = 'all'"
     />
 
     <link rel="stylesheet preload" href="css/style.css" as="style" />
@@ -377,11 +377,13 @@
                     <div class="specials">
                       <h5>🔥 Current Pro Shop Specials</h5>
                       <p class="deal">
-                        50% OFF Vice and Bridgestone Golf Balls
+                        Callaway Chrome Family Golf Balls - $45 per dozen (prior
+                        gen)
                       </p>
-                      <p class="deal">30% OFF Titleist Hats</p>
-                      <p class="deal">40-50% OFF all Apparel</p>
-                      <p class="deal">50% OFF Select FJ and Adidas shoes</p>
+                      <p class="deal">Titleist and Ping Hats - $20 each</p>
+                      <p class="deal">Ladies Shoes - $50 per pair</p>
+                      <p class="deal">Men's Shoes - 60% OFF</p>
+                      <p class="deal">Foot Joy KSU Gloves - $15 each</p>
                     </div>
                   </div>
                   <div class="row link-bar flex-row">
