--- a/ladies-evening-league.html
+++ b/ladies-evening-league.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -18,14 +18,14 @@
       href="assets/css/vendor/bootstrap.min.css"
       as="style"
       media="print"
-      onload="this.media='all'"
+      onload="this.media = 'all'"
     />
     <link
       rel="stylesheet preload"
       href="assets/css/plugins/metismenu.css"
       as="style"
       media="print"
-      onload="this.media='all'"
+      onload="this.media = 'all'"
     />
 
     <link rel="stylesheet preload" href="css/style.css" as="style" />
@@ -124,7 +124,7 @@
         <div class="container-consulting">
           <div class="row">
             <div class="title-center-style-two">
-              <h2 class="title">2025 Ladies Evening League Schedule</h2>
+              <h2 class="title">2026 Ladies Evening League Schedule</h2>
               <div class="schedule-note">
                 We will tee off at 6pm each week on Thursday evening. Check in
                 begins at 5:30. $10 for members and $15 for non-members.
@@ -136,35 +136,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">April 24th</span> - 4 Lady Scramble
-                    </p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p><span class="date">May 1st</span> - 3 Lady Scramble</p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p><span class="date">May 8th</span> - 2 Lady Scramble</p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p>
-                      <span class="date">May 15th</span> - 4 Lady Scramble
-                      Odds/Evens - 2 two lady scrambles. Even holes take high
-                      score. Odd holes take low score.
+                      <span class="date">April 23rd</span> - 4 Lady Scramble
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -174,8 +146,27 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">May 22nd</span> - 3 Lady Scramble -
-                      Only 1 player putts each hole and must alternate.
+                      <span class="date">April 30th</span> - 3 Lady Scramble
+                    </p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p><span class="date">May 7th</span> - 2 Lady Scramble</p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p>
+                      <span class="date">May 14th</span> - 4 Lady Scramble
+                      Odds/Evens (2 two lady scrambles, even holes take high
+                      score. Odd holes take low score)
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -185,8 +176,8 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">May 29th</span> - Two 2 lady Scramble
-                      Rights and Lefts – Take the best of the two scores.
+                      <span class="date">May 21st</span> - 3 Lady Scramble (Only
+                      1 player putts each hole and must alternate)
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -196,8 +187,8 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">June 5th</span> - 4 Lady Shamble -
-                      Count 2 scores.
+                      <span class="date">May 28th</span> - Two 2 lady Scramble
+                      Rights and Lefts – Take the best of the two scores
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -207,56 +198,8 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">June 12th</span> -
-                      Carts/Riders/Opposites - Switch scramble partners every 3
-                      holes. Count 1 score for the group on each hole.
-                    </p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p><span class="date">June 19th</span> - 3 Lady Scramble</p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p>
-                      <span class="date">June 26th</span> - 2 Lady Scramble -
-                      One partner putts odd holes & the other on even holes.
-                    </p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p><span class="date">July 3rd</span> - 4 Lady Scramble</p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p><span class="date">July 10th</span> - 3 Lady Scramble</p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p>
-                      <span class="date">July 17th</span> -
-                      Carts/Riders/Opposites - Switch scramble partners every 3
-                      holes. Count 1 score for the group on each hole.
+                      <span class="date">June 4th</span> - 4 Lady Shamble (
+                      Count 2 scores)
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -266,8 +209,56 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">July 24th</span> - 2 Lady Modified
-                      Chapman
+                      <span class="date">June 11th</span> -
+                      Carts/Riders/Opposites (Switch scramble partners every 3
+                      holes. Count 1 score for the group on each hole)
+                    </p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p><span class="date">June 18th</span> - 3 Lady Scramble</p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p>
+                      <span class="date">June 25th</span> - 2 Lady Scramble (One
+                      partner putts odd holes & the other on even holes)
+                    </p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p><span class="date">July 2nd</span> - 4 Lady Scramble</p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p><span class="date">July 9th</span> - 3 Lady Scramble</p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p>
+                      <span class="date">July 16th</span> -
+                      Carts/Riders/Opposites (Switch scramble partners every 3
+                      holes. Count 1 score for the group on each hole)
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -277,9 +268,9 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">July 31st</span> - 4 Lady Scramble and
-                      Shamble - Scramble par 4’s & 5’s and shamble par 3’s.
-                      Count 1 score on par 3’s.
+                      <span class="date">July 23rd</span> - 4 Lady Wildcard (3
+                      scramble 1 shamble) - Shamble player rotates and add
+                      scores together
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -289,7 +280,8 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">August 7th</span> - 3 Lady Scramble
+                      <span class="date">July 30th</span> - 4 Lady Scramble par
+                      4’s & 5’s and Shamble par 3’s (count 1 score on par 3’s)
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -299,7 +291,17 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">August 14th</span> - 2 Lady Scramble.
+                      <span class="date">August 6th</span> - 3 Lady Scramble
+                    </p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p>
+                      <span class="date">August 13th</span> - 2 Lady Scramble.
                       Only count strokes to get both balls onto the green, no
                       putter needed.
                     </p>
@@ -311,9 +313,9 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">August 21st</span> - 3 Player Odds and
-                      Evens - Scramble odd holes, shamble even holes. Count 1
-                      score.
+                      <span class="date">August 20th</span> - 3 Player Odds and
+                      Evens (Scramble odd holes, shamble even holes. Count 1
+                      score)
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -323,9 +325,9 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">August 28th</span> - 4 Lady Scramble
-                      Throw Out - Teams get to throw out 1 score on a par 3, 4,
-                      & 5.
+                      <span class="date">August 27th</span> - 4 Lady Scramble
+                      Throw Out (Teams get to throw out 1 score on a par 3, 4, &
+                      5)
                     </p>
                   </div>
                   <div class="timeline-dot">
