--- a/mens-league.html
+++ b/mens-league.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -18,14 +18,14 @@
       href="assets/css/vendor/bootstrap.min.css"
       as="style"
       media="print"
-      onload="this.media='all'"
+      onload="this.media = 'all'"
     />
     <link
       rel="stylesheet preload"
       href="assets/css/plugins/metismenu.css"
       as="style"
       media="print"
-      onload="this.media='all'"
+      onload="this.media = 'all'"
     />
 
     <link rel="stylesheet preload" href="css/style.css" as="style" />
@@ -115,10 +115,11 @@
         <div class="container-consulting">
           <div class="row">
             <div class="title-center-style-two">
-              <h2 class="title">2025 Men’s League Schedule</h2>
+              <h2 class="title">2026 Men’s League Schedule</h2>
               <div class="schedule-note">
-                We will tee off at 6pm each week Wednesday evening. Check in
-                begins at 5:30. $10 for members and $15 for non-members.
+                Check-in begins at 5pm each Wednesday. Shotgun start at 6pm. $10 for
+                members and $15 for non-members. Tees: White (or Green for those
+                65 and above).
               </div>
             </div>
             <div class="col-lg-12">
@@ -126,7 +127,10 @@
                 <div class="timeline-line"></div>
                 <div class="single-consulting-one">
                   <div class="right-area">
-                    <p><span class="date">April 9th</span> - 4 Man Scramble</p>
+                    <p>
+                      <span class="date">April 15th</span> - 3 Man Scramble (1
+                      person putts each hole and must alternate)
+                    </p>
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
@@ -135,36 +139,74 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">April 16th</span> - Odds and Evens - 4
+                      <span class="date">April 22nd</span> - 4 Man Scramble from
+                      Yellow Tee’s
+                    </p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p><span class="date">April 29th</span> - 2 Man Scramble</p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p>
+                      <span class="date">May 6th</span> - 4 Man Scramble /
+                      Shamble (Scramble Even Holes / Shamble Odd Holes)
+                    </p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p>
+                      <span class="date">May 13th</span> - 4 Man 4 Club Scramble
+                      (any four clubs you want for each person)
+                    </p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p>
+                      <span class="date">May 20th</span> - 4 Man Wildcard (3
+                      Scramble /1 shamble) Shamble player rotates and add both
+                      scores
+                    </p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p>
+                      <span class="date">May 27th</span> -
+                      Carts/Riders/Opposites (2 two-man scramble switch partners
+                      every 3 holes)
+                    </p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p>
+                      <span class="date">June 3rd</span> - Odds and Evens: 4
                       players break into two scramble teams. High score odds /
-                      low score evens.
-                    </p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p><span class="date">April 23rd</span> - 3 Man Scramble</p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p><span class="date">April 30th</span> - 2 Man Scramble</p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p>
-                      <span class="date">May 7th</span> - 4 Man Scramble /
-                      Shamble - Scramble even holes/shamble odd holes.
+                      Low score evens
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -174,7 +216,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">May 14th</span> - HELL NIGHT 4 Man
+                      <span class="date">June 10th</span> - HELL NIGHT 4 Man
                       Scramble
                     </p>
                   </div>
@@ -185,9 +227,8 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">May 21st</span> - 4 Man Wildcard (3
-                      Scramble /1 Shamble) - Shamble player rotates. Add both
-                      scores.
+                      <span class="date">June 17th</span> - 4 Man Shamble take 3
+                      scores
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -197,9 +238,8 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">May 28th</span> -
-                      Carts/Riders/Opposites - 2 two-man scramble switch
-                      partners every 3 holes.
+                      <span class="date">June 24th</span> - 2 Man Scramble – 1
+                      player putts odd holes, 1 player putts even holes
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -209,8 +249,8 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">June 4th</span> - 3 Man Scramble - 1
-                      person putts each hole and must alternate.
+                      <span class="date">July 1st</span> - 4 Scramble (black
+                      tees par 5’s / green tees par 4’s / yellow tees par 3’s)
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -220,8 +260,9 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">June 11th</span> - 4 Man 4 Club
-                      Scramble - Any four clubs you want for each person.
+                      <span class="date">July 8th</span> - 4 Man Wildcard (3
+                      scramble 1 shamble) - Shamble player rotates and add
+                      scores together
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -231,8 +272,8 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">June 18th</span> - 4 Man Shamble - Take
-                      3 scores.
+                      <span class="date">July 15th</span> - 2 Man Scramble /
+                      Shamble (scramble odd holes / shamble even holes)
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -242,8 +283,9 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">June 25th</span> - 2 Man Scramble – 1
-                      player putts odd holes, 1 player putts even holes.
+                      <span class="date">July 22nd</span> -
+                      Carts/Riders/Opposites (2 two-man scramble partners switch
+                      partners every 3 holes take 1 score)
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -253,73 +295,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">July 2nd</span> - 4 Scramble - Black
-                      tees par 5’s / green tees par 4’s / yellow tees par 3’s.
-                    </p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p>
-                      <span class="date">July 9th</span> - 4 Man Wildcard (3
-                      scramble, 1 shamble) - Shamble player rotates and add
-                      scores together.
-                    </p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p>
-                      <span class="date">July 16th</span> - 2 Man Scramble /
-                      Shamble - Scramble odd holes / shamble even holes.
-                    </p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p>
-                      <span class="date">July 23rd</span> - 4 Man Shamble /
-                      Scramble - Team scramble first two shots / shamble from
-                      there take 3 scores.
-                    </p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p>
-                      <span class="date">July 30th</span> -
-                      Carts/Riders/Opposites - 2 two-man scramble partners
-                      switch partners every 3 holes take 1 score.
-                    </p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p><span class="date">August 6th</span> - 3 Man Scramble</p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p>
-                      <span class="date">August 13th</span> - HELL NIGHT 4 Man
+                      <span class="date">July 29th</span> - HELL NIGHT 4 Man
                       Scramble
                     </p>
                   </div>
@@ -330,7 +306,41 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">August 20th</span> - 2 Man Scramble
+                      <span class="date">August 5th</span> - 3 Man Shamble (Take
+                      one score on par 5’s / Take two scores on par 4’s / take 3
+                      scores on par 3’s)
+                    </p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p>
+                      <span class="date">August 12th</span> - 4 Man Shamble /
+                      Scramble (team scramble first two shots / shamble from
+                      there take 3 scores)
+                    </p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p>
+                      <span class="date">August 19th</span> - 2 Man Scramble
+                    </p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p>
+                      <span class="date">August 26th</span> - Short Course 4 Man Scramble
                     </p>
                   </div>
                   <div class="timeline-dot">
