--- a/pro-shop.html
+++ b/pro-shop.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -18,14 +18,14 @@
       href="assets/css/vendor/bootstrap.min.css"
       as="style"
       media="print"
-      onload="this.media='all'"
+      onload="this.media = 'all'"
     />
     <link
       rel="stylesheet preload"
       href="assets/css/plugins/metismenu.css"
       as="style"
       media="print"
-      onload="this.media='all'"
+      onload="this.media = 'all'"
     />
 
     <link rel="stylesheet preload" href="css/style.css" as="style" />
@@ -73,9 +73,9 @@
     <!-- rts banner four end -->
 
     <section class="pro-shop-body">
-      <div class="container container-of-a-pro-shop-special">
+      <!-- <div class="container container-of-a-pro-shop-special">
         <img src="images/pro-shop-special.jpg" alt="" />
-      </div>
+      </div> -->
       <div class="band-of-brands">
         <div class="container">
           <div class="row justify-content-around g-5 g-md-0">
@@ -121,21 +121,28 @@
             data-wow-delay=".1s"
           >
             <div class="row flex-column g-4 g-md-5">
-              <div class="col-12" style="flex-grow: 1">
+              <!-- <div class="col-12" style="flex-grow: 1">
                 <div class="initial-note">
                   <p class="shop-note">
                     All brands above are available in the pro shop and we
                     can easily order products from Taylor Made and Cleveland Golf!
                   </p>
                 </div>
-              </div>
+              </div> -->
               <div class="col-12">
                 <div class="specials rounded-corners">
+                  <p class="shop-note">
+                    All brands above are available in the pro shop and we can
+                    easily order products from Taylor Made and Cleveland Golf!
+                  </p>
                   <h5>🔥 Current Pro Shop Specials</h5>
-                  <p class="deal">50% OFF Vice and Bridgestone Golf Balls</p>
-                  <p class="deal">30% OFF Titleist Hats</p>
-                  <p class="deal">40-50% OFF all Apparel</p>
-                  <p class="deal">50% OFF Select FJ and Adidas shoes</p>
+                  <p class="deal">
+                    Callaway Chrome Family Golf Balls $45 per dozen (prior gen)
+                  </p>
+                  <p class="deal">Titleist and Ping Hats $20 each</p>
+                  <p class="deal">Ladies Shoes $50 per pair</p>
+                  <p class="deal">Men's Shoes 60% OFF</p>
+                  <p class="deal">Foot Joy KSU Gloves $15 each</p>
                 </div>
               </div>
             </div>
